@@ -1,3 +1,5 @@
+(2001/11/22 - broeker) Quell some compiler warnings cause by missing #includes
+	               and private declarations of system library functions.
 (2001/10/30 - petrs)   Added Joe Steffen to author's list as the creator.
 (2001/10/19 - broeker) Replace usages of freopen() by fclose()/fopen() pairs
 		       to work around bug in some Linux libc constellation.
